# advent-of-code-2025

./: .editorconfig  .gitignore  Cargo.toml
browser/: day08.html  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
browser/src/: day08.tsx  stageWithGrid.ts
src/core/: grid.rs  lib.rs  path_find.rs  project.rs
src/core_lib/: grid.rs  kd_tree.rs  lib.rs  range_set.rs
src/puzzle01/: main.rs
src/puzzle02/: main.rs
src/puzzle03/: main.rs
src/puzzle04/: main.rs
src/puzzle05/: main.rs
src/puzzle06/: main.rs
src/puzzle07/: main.rs
src/puzzle08/: main.rs
