[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
priority-queue = "2.7.0"
regex = "1.12.2"

[lib]
name = "core"
path = "src/core/lib.rs"

[[bin]]
name = "puzzle01"
path = "src/puzzle01/main.rs"

[[bin]]
name = "puzzle02"
path = "src/puzzle02/main.rs"

[[bin]]
name = "puzzle03"
path = "src/puzzle03/main.rs"

[[bin]]
name = "puzzle04"
path = "src/puzzle04/main.rs"

[[bin]]
name = "puzzle05"
path = "src/puzzle05/main.rs"
